4/assets/route-lb.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app2
  name: app2-lb
spec:
  host: app2.lb.example.lab
  port:
    targetPort: 8080
  to:
    kind: Service
    name: app2
    weight: 100
  wildcardPolicy: None
