4/assets/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app2
  name: app2
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: app2
    weight: 100
  wildcardPolicy: None
